--- a/i18n/et.json
+++ b/i18n/et.json
@@ -1,8 +1,11 @@
 {
 	"@metadata": {
 		"authors": [
-			"Kareyac"
+			"Kareyac",
+			"Pikne",
+			"Rivoz"
 		]
 	},
-	"forms-form-editor-prop-categories": "Kategooriad"
+	"forms-form-editor-prop-categories": "Kategooriad",
+	"apihelp-forms-form-submit-param-summary": "Muuda resümeed"
 }
