--- a/i18n/fa.json
+++ b/i18n/fa.json
@@ -51,5 +51,6 @@
 	"forms-form-editor-prop-target-email-subject": "موضوع",
 	"forms-form-editor-prop-target-email-body": "محتوا",
 	"forms-error-target-mail-send-failed": "ارسال نامه ناموفق",
-	"forms-label-appearance": "ظاهر"
+	"forms-label-appearance": "ظاهر",
+	"forms-form-editor-prop-showformname": "نمایش نام فرم"
 }
