--- a/i18n/lb.json
+++ b/i18n/lb.json
@@ -43,5 +43,7 @@
 	"forms-editor-toolbar-cancel": "Ofbriechen",
 	"forms-editor-toolbar-save": "Ännerunge späicheren",
 	"forms-form-editor-form-props-summary-label": "Resumé",
-	"forms-editor-toolbar-save-label": "Späicheren"
+	"forms-editor-toolbar-save-label": "Späicheren",
+	"apihelp-forms-form-submit-param-form": "Numm vum Formulaire",
+	"apihelp-forms-form-submit-param-target": "Numm vum Zil"
 }
