--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -3,6 +3,7 @@
 		"authors": [
 			"Ajeje Brazorf",
 			"Dejan Savuljesku",
+			"McDutchie",
 			"Patric Wirth",
 			"Verdy p"
 		]
@@ -103,5 +104,14 @@
 	"forms-editor-group-empty-help": "Help text for the empty group in the form editor",
 	"forms-form-editor-form-props-summary-label": "Field label for the summary field in the form editor",
 	"forms-form-editor-form-props-summary-placeholder": "Placeholder text for the summary field in the form editor",
-	"forms-editor-toolbar-save-label": "Generic label for a save button\n{{Identical|Save}}"
+	"forms-editor-toolbar-save-label": "Generic label for a save button\n{{Identical|Save}}",
+	"forms-form-editor-prop-showformname": "Label for the \"showTitle\" checkbox field in the form editor.\n{{Identical|Display form name}}",
+	"apihelp-forms-form-submit-param-data": "Help message for the \"data\" parameter in the \"form-submit\" api module",
+	"apihelp-forms-form-submit-param-form": "Help message for the \"form\" parameter in the \"form-submit\" api module",
+	"apihelp-forms-form-submit-param-target": "Help message for the \"target\" parameter in the \"form-submit\" api module",
+	"apihelp-forms-form-submit-param-summary": "Help message for the \"summary\" parameter in the \"form-submit\" api module\n\n{{Doc-important|This refers to the summary of an edit, not to editing a summary!}}",
+	"apihelp-forms-get-definitions-param-definitiontype": "Help message for the \"definitiontype\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-name": "Help message for the \"name\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-type": "Help message for the \"type\" parameter in the \"get-definitions\" api module",
+	"apihelp-forms-get-definitions-param-validfortime": "Help message for the \"validfortime\" parameter in the \"get-definitions\" api module"
 }
