Sync I18N from master

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -2,13 +2,13 @@
 	"@metadata": {
 		"authors": [
 			"Ajeje Brazorf",
+			"EmDashUser002",
 			"Gomoko",
 			"JLTRY",
 			"Mahabarata",
 			"McDutchie",
 			"Paraboule",
-			"Verdy p",
-			"EmDashUser002"
+			"Verdy p"
 		]
 	},
 	"forms-desc": "Cadre de formulaire complet pour MediaWiki",
