--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -1,9 +1,9 @@
 {
 	"@metadata": {
 		"authors": [
+			"GuoPC",
 			"LittlePaw365",
-			"沈澄心",
-			"GuoPC"
+			"沈澄心"
 		]
 	},
 	"formeditor": "表单编辑器",
