--- a/i18n/bn.json
+++ b/i18n/bn.json
@@ -16,7 +16,7 @@
 	"forms-label-phone": "ফোন",
 	"forms-label-email": "ইমেইল",
 	"forms-form-editor-prop-targettypetemplate": "টেমপ্লেট",
-	"forms-action-editsource": "সংজ্ঞার উৎস সম্পাদনা করুন",
+	"forms-action-editsource": "উৎস সম্পাদনা",
 	"forms-editor-toolbar-cancel": "বাতিল",
 	"forms-editor-toolbar-done": "সম্পন্ন",
 	"forms-form-editor-form-props-summary-label": "সারাংশ",
