--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -6,7 +6,7 @@
 	},
 	"forms-createforminstance-form-name": "$1 만들기",
 	"formeditor": "폼 편집기",
-	"forms-api-get-definitions-not-exist": "\"$1\" 정의가 존재하지 않습니다",
+	"forms-api-get-definitions-not-exist": "\"$1\" 폼이 존재하지 않습니다",
 	"forms-error-no-form-specified": "지정된 폼이 없습니다",
 	"forms-form-edit-title": "$1 편집",
 	"forms-edit-error-form-sealed": "이 폼은 봉인되어 있어서 편집할 수 없습니다",
@@ -49,5 +49,8 @@
 	"forms-editor-toolbar-save-label": "저장",
 	"apihelp-forms-form-submit-param-data": "폼을 통해 제출된 데이터",
 	"apihelp-forms-form-submit-param-form": "폼 이름",
-	"apihelp-forms-form-submit-param-summary": "편집 요약"
+	"apihelp-forms-form-submit-param-summary": "편집 요약",
+	"forms-action-editsource": "원본 편집",
+	"forms-target-page-label": "대상 문서",
+	"forms-definitions-not-exist": "\"$1\" 폼이 존재하지 않습니다"
 }
