--- a/i18n/ia.json
+++ b/i18n/ia.json
@@ -105,5 +105,13 @@
 	"forms-editor-toolbar-done": "Facite",
 	"forms-editor-group-empty-help": "Le formulario actualmente non ha elementos. Aperi le scheda “Elementos del formulario” e trahe elementos verso illo.",
 	"forms-form-editor-form-props-summary-label": "Summario",
-	"forms-form-editor-form-props-summary-placeholder": "Describe lo que tu ha cambiate"
+	"forms-form-editor-form-props-summary-placeholder": "Describe lo que tu ha cambiate",
+	"editwithform": "Modificar con formulario",
+	"editwithform-with-title": "Modificar con formulario: $1",
+	"forms-target-page-label": "Pagina de destination",
+	"forms-editor-create-form-instance-label": "Crear con iste formulario",
+	"forms-form-definition-label": "Le formulario a usar",
+	"forms-page-already-exists-no-form": "Iste pagina ja exite, ma non ha essite create per un formulario",
+	"forms-definitions-not-exist": "Le formulario “$1” non existe",
+	"forms-action-edit-with-form": "Modificar con formulario"
 }
