--- a/i18n/he.json
+++ b/i18n/he.json
@@ -14,13 +14,13 @@
 	"forms-form-editor-prop-targettitle": "כותרת",
 	"forms-label-employees-number": "מספר העובדים",
 	"forms-label-city": "עיר",
-	"forms-action-editsource": "עריכת קוד המקור של ההגדרה",
+	"forms-action-editsource": "עריכת קוד המקור",
 	"forms-desc": "מסגרת טפסים כללית למדיה־ויקי",
 	"createforminstance": "יצירת מופע של טופס",
 	"forms-createforminstance-form-name": "יצירת $1",
 	"formeditor": "עורך טפסים",
 	"forms-api-get-definitions-no-name": "פרמטר השם חייב להיות מוגדר בשביל הסוג \"get-definition\"",
-	"forms-api-get-definitions-not-exist": "ההגדרה \"$1\" אינה קיימת",
+	"forms-api-get-definitions-not-exist": "הטופס \"$1\" אינו קיים",
 	"forms-target-json-page-summary": "עריכה באמצעות טופס: $1",
 	"forms-error-no-form-specified": "לא צוין טופס",
 	"forms-edit-error-form-sealed": "הטופס הזה נעול בחותמת ולא ניתן לערוך אותו",
@@ -113,5 +113,13 @@
 	"apihelp-forms-get-definitions-param-definitiontype": "סוג מבוקש של הגדרת הטופס",
 	"apihelp-forms-get-definitions-param-name": "שם הגדרת הטופס",
 	"apihelp-forms-get-definitions-param-type": "סוג הבקשה. יכול להיות \"query-available\" או \"get-definition\"",
-	"apihelp-forms-get-definitions-param-validfortime": "הזמן שהגדרת הטופס תקפה בו"
+	"apihelp-forms-get-definitions-param-validfortime": "הזמן שהגדרת הטופס תקפה בו",
+	"editwithform": "עריכה באמצעות טופס",
+	"editwithform-with-title": "עריכה באמצעות טופס: $1",
+	"forms-target-page-label": "דף היעד",
+	"forms-editor-create-form-instance-label": "יצירה באמצעות הטופס הזה",
+	"forms-form-definition-label": "באיזה טופס להשתמש",
+	"forms-page-already-exists-no-form": "הדף הזה כבר קיים, אבל לא נוצר באמצעות טופס",
+	"forms-definitions-not-exist": "הטופס \"$1\" אינו קיים",
+	"forms-action-edit-with-form": "עריכה באמצעות טופס"
 }
