--- a/i18n/sr-ec.json
+++ b/i18n/sr-ec.json
@@ -10,5 +10,6 @@
 	"forms-form-editor-form-props-summary-label": "Опис",
 	"forms-form-editor-form-props-summary-placeholder": "Опишите шта сте променили",
 	"forms-editor-toolbar-save-label": "Сачувај",
-	"apihelp-forms-form-submit-param-summary": "Опис измене"
+	"apihelp-forms-form-submit-param-summary": "Опис измене",
+	"forms-action-editsource": "Уреди извор"
 }
