--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -18,7 +18,7 @@
 	"forms-createforminstance-form-name": "أنشئ $1",
 	"formeditor": "محرر النموذج",
 	"forms-api-get-definitions-no-name": "يجب تعيين معلمة الاسم للنوع \"get-definition\"",
-	"forms-api-get-definitions-not-exist": "التعريف \" $1 \" غير موجود",
+	"forms-api-get-definitions-not-exist": "النموذج \"$1\" غير موجود",
 	"forms-target-json-page-summary": "تحرير حسب النموذج: $1",
 	"forms-error-no-form-specified": "لم يتم تحديد أي شكل",
 	"forms-form-edit-title": "تحرير $1",
@@ -94,7 +94,7 @@
 	"right-forms-edit-form-definition": "تحرير تعريفات النموذج",
 	"action-forms-create-form": "إنشاء النماذج",
 	"action-forms-edit-form-definition": "تحرير تعريفات النموذج",
-	"forms-action-editsource": "عدل مصدر التعريف",
+	"forms-action-editsource": "تعديل المصدر",
 	"forms-form-editor-prop-rl-deps": "تبعيات محمل الموارد",
 	"forms-form-editor-prop-rl-deps-help": "حدد قائمة بالوحدات النمطية لـ ResourceLoader التي يجب تحميلها عند إنشاء النموذج",
 	"forms-error-target-mail-no-mail": "لا يوجد عنوان بريد إلكتروني صالح متاح",
@@ -113,5 +113,13 @@
 	"apihelp-forms-get-definitions-param-definitiontype": "نوع التعريف المطلوب للنموذج",
 	"apihelp-forms-get-definitions-param-name": "اسم تعريف النموذج",
 	"apihelp-forms-get-definitions-param-type": "نوع الطلب. يمكن أن يكون \"متاح للاستعلام\" أو \"الحصول على التعريف\"",
-	"apihelp-forms-get-definitions-param-validfortime": "الوقت الذي يكون فيه تعريف النموذج صالحًا"
+	"apihelp-forms-get-definitions-param-validfortime": "الوقت الذي يكون فيه تعريف النموذج صالحًا",
+	"editwithform": "تحرير باستخدام النموذج",
+	"editwithform-with-title": "تعديل باستخدام النموذج: $1",
+	"forms-target-page-label": "الصفحة المستهدفة",
+	"forms-editor-create-form-instance-label": "إنشاء باستخدام هذا النموذج",
+	"forms-form-definition-label": "نموذج للاستخدام",
+	"forms-page-already-exists-no-form": "هذه الصفحة موجودة بالفعل، ولكن لم يتم إنشاؤها بواسطة نموذج",
+	"forms-definitions-not-exist": "النموذج \"$1\" غير موجود",
+	"forms-action-edit-with-form": "تحرير باستخدام النموذج"
 }
