--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -48,7 +48,7 @@
 	"createforminstance": "Formulier aanmaken",
 	"formeditor": "Formulieren-editor",
 	"forms-api-get-definitions-no-name": "De parameter ‘Name’ moet worden opgegeven voor het type ‘get-definition’",
-	"forms-api-get-definitions-not-exist": "De definitie “$1” bestaat niet",
+	"forms-api-get-definitions-not-exist": "Formulier “$1” bestaat niet",
 	"forms-target-json-page-summary": "Bewerking via formulier: $1",
 	"forms-edit-error-form-sealed": "Dit formulier is verzegeld en kan niet worden bewerkt",
 	"forms-api-form-submit-invalid-target": "Doel voor dit formulier is ongeldig",
@@ -87,7 +87,7 @@
 	"apihelp-forms-form-submit-summary": "Biedt bewerking via formulieren",
 	"right-forms-edit-form-definition": "Formulierdefinities bewerken",
 	"action-forms-edit-form-definition": "formulierdefinities te bewerken",
-	"forms-action-editsource": "Bron van de definitie bewerken",
+	"forms-action-editsource": "Brontekst bewerken",
 	"forms-form-editor-prop-rl-deps": "Afhankelijkheden van de resource-lader",
 	"forms-form-editor-prop-rl-deps-help": "Geef een lijst op met ResourceLoader-modules die moeten worden geladen wanneer het formulier wordt aangemaakt",
 	"forms-form-editor-prop-targettypeemail": "E-mail",
