--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -113,5 +113,13 @@
 	"apihelp-forms-get-definitions-param-definitiontype": "Help message for the \"definitiontype\" parameter in the \"get-definitions\" api module",
 	"apihelp-forms-get-definitions-param-name": "Help message for the \"name\" parameter in the \"get-definitions\" api module",
 	"apihelp-forms-get-definitions-param-type": "Help message for the \"type\" parameter in the \"get-definitions\" api module",
-	"apihelp-forms-get-definitions-param-validfortime": "Help message for the \"validfortime\" parameter in the \"get-definitions\" api module"
+	"apihelp-forms-get-definitions-param-validfortime": "Help message for the \"validfortime\" parameter in the \"get-definitions\" api module",
+	"editwithform": "Special page name for [[Special:EditWithForm]] special page",
+	"editwithform-with-title": "Special page title label. \n$1 - name of the page being edited",
+	"forms-target-page-label": "Label for the field specifying the target page in the form editor",
+	"forms-editor-create-form-instance-label": "Label for the button on Special:EditWithForm to create a new form instance",
+	"forms-form-definition-label": "Field name",
+	"forms-page-already-exists-no-form": "Error message when the page already exists and no form is specified",
+	"forms-definitions-not-exist": "Error message when the definition to the given name is not a valid form definition.\n$1 - form name",
+	"forms-action-edit-with-form": "Label for content action link.\n{{Identical|Edit with form}}"
 }
