--- a/i18n/skr-arab.json
+++ b/i18n/skr-arab.json
@@ -11,5 +11,7 @@
 	"forms-editor-toolbar-done": "تھی ڳیا",
 	"forms-form-editor-form-props-summary-label": "خلاصہ",
 	"forms-form-editor-form-props-summary-placeholder": "بیان کرو جو تساں کیا تبدیل کیتے",
-	"forms-editor-toolbar-save-label": "بچاؤ"
+	"forms-editor-toolbar-save-label": "بچاؤ",
+	"forms-target-page-label": "ہدف ورقہ",
+	"forms-definitions-not-exist": "فارم \"$1\" موجود کائنی"
 }
