--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -52,5 +52,5 @@
 	"apihelp-forms-form-submit-param-summary": "편집 요약",
 	"forms-action-editsource": "원본 편집",
 	"forms-target-page-label": "대상 문서",
-	"forms-definitions-not-exist": "\"$1\" 폼이 존재하지 않습니다"
+	"forms-definitions-not-exist": "\"$1\" 폼이 존재하지 않습니다."
 }
