--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -107,5 +107,13 @@
 	"forms-editor-toolbar-done": "Klaar",
 	"forms-editor-group-empty-help": "Het formulier heeft nog geen elementen. Open het tabblad “Formulierelementen” en sleep elementen hierheen.",
 	"forms-form-editor-form-props-summary-label": "Samenvatting",
-	"forms-form-editor-form-props-summary-placeholder": "Beschrijf wat u hebt gewijzigd"
+	"forms-form-editor-form-props-summary-placeholder": "Beschrijf wat u hebt gewijzigd",
+	"editwithform": "Bewerken met formulier",
+	"editwithform-with-title": "Bewerken met formulier: $1",
+	"forms-target-page-label": "Doelpagina",
+	"forms-editor-create-form-instance-label": "Aanmaken met dit formulier",
+	"forms-form-definition-label": "Te gebruiken formulier",
+	"forms-page-already-exists-no-form": "Deze pagina bestaat al, maar is niet door een formulier aangemaakt.",
+	"forms-definitions-not-exist": "Het formulier “$1” bestaat niet.",
+	"forms-action-edit-with-form": "Bewerken met formulier"
 }
