--- a/i18n/lb.json
+++ b/i18n/lb.json
@@ -1,6 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
+			"GilPe",
 			"Robby",
 			"Volvox"
 		]
@@ -15,7 +16,7 @@
 	"forms-form-editor-prop-title": "Titel",
 	"forms-form-editor-prop-showtitle": "Titel weisen",
 	"forms-form-editor-prop-categories": "Kategorien",
-	"forms-form-editor-prop-abstract": "Resumé",
+	"forms-form-editor-prop-abstract": "Resümmee",
 	"forms-form-editor-prop-partial": "Partiell",
 	"forms-form-editor-prop-targettitle": "Titel",
 	"forms-form-editor-prop-targettypedatabase": "Datebank",
@@ -42,7 +43,7 @@
 	"forms-form-editor-prop-targettypeemail": "E-Mail",
 	"forms-editor-toolbar-cancel": "Ofbriechen",
 	"forms-editor-toolbar-save": "Ännerunge späicheren",
-	"forms-form-editor-form-props-summary-label": "Resumé",
+	"forms-form-editor-form-props-summary-label": "Resümmee",
 	"forms-editor-toolbar-save-label": "Späicheren",
 	"apihelp-forms-form-submit-param-form": "Numm vum Formulaire",
 	"apihelp-forms-form-submit-param-target": "Numm vum Zil",
