Sync I18N from master

--- a/i18n/lb.json
+++ b/i18n/lb.json
@@ -1,9 +1,9 @@
 {
 	"@metadata": {
 		"authors": [
+			"GilPe",
 			"Robby",
-			"Volvox",
-			"GilPe"
+			"Volvox"
 		]
 	},
 	"formeditor": "Editeur fir Formulairen",
